--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   sqflite:
   path_provider:
   flutter_riverpod:
-  grouped_list:
+  grouped_list: # ListViewをまとめる
+  package_info_plus: # アプリのバージョン情報
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  webview_flutter: ^4.0.6
 
 dev_dependencies:
   flutter_test:
