--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   grouped_list: # ListViewをまとめる
   package_info_plus: # アプリのバージョン情報
   path:
+  fluttertoast: # トースト
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
