--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,2 +1,6 @@
 # https://pub.dev/packages/pedantic_mono
 include: package:pedantic_mono/analysis_options.yaml
+
+analyzer:
+  errors:
+    invalid_annotation_target: ignore
