--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.6
   flutter_riverpod: ^2.3.2
   fluttertoast: ^8.2.1 # トースト
+  freezed_annotation: ^2.2.0
   grouped_list: ^5.1.2 # ListViewをまとめる
+  hooks_riverpod: ^2.3.2
+  json_annotation: ^4.8.0
   package_info_plus: ^3.0.3 # アプリのバージョン情報
   path: ^1.8.2 # ファイルアクセス
   path_provider: ^2.0.14 # ファイルアクセス
@@ -22,9 +26,12 @@ dependencies:
   webview_flutter: ^4.0.6 # webview
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
   pedantic_mono: any
 
 flutter:
